--- a/app/src/main/res/drawable/ic_criteria_background.xml
+++ b/app/src/main/res/drawable/ic_criteria_background.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#000000" />
+        android:color="@color/black" />
 
     <padding
         android:bottom="1dp"
