--- a/app/src/main/res/drawable/ic_start_button.xml
+++ b/app/src/main/res/drawable/ic_start_button.xml
@@ -4,7 +4,7 @@
 
 
     <solid
-        android:color="#ffffff" />
+        android:color="@color/colorPrimary" />
 
     <stroke
         android:width="2dp"
