--- a/app/src/main/res/drawable/rounded_box.xml
+++ b/app/src/main/res/drawable/rounded_box.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle" >
 
     <solid
-        android:color="#ffffff" >
+        android:color="@color/white" >
     </solid>
     <stroke
-        android:color="#000000"
+        android:color="@color/black"
         android:width="1dp">
 
     </stroke>
