--- a/app/src/main/res/layout/activity_record_voice.xml
+++ b/app/src/main/res/layout/activity_record_voice.xml
@@ -10,10 +10,10 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/primary"
+        android:background="@color/colorPrimary"
         android:textColor="@color/white"
         android:elevation="4dp"
-        app:pstsIndicatorColor="@color/tab_strip"
+        app:pstsIndicatorColor="@color/colorPrimaryDark"
         app:pstsIndicatorHeight="@dimen/tab_indicator_height"
         app:pstsShouldExpand="true"/>
 
