--- a/app/src/main/res/layout/activity_review_report.xml
+++ b/app/src/main/res/layout/activity_review_report.xml
@@ -51,7 +51,7 @@
             <View
                 android:id="@+id/divider18_reviewReport"
                 android:layout_width="1dp"
-                android:background="#000000"
+                android:background="@color/black"
                 android:layout_height="match_parent" />
 
             <LinearLayout
@@ -63,7 +63,7 @@
                 <View
                     android:id="@+id/divider19_reviewReport"
                     android:layout_height="1dp"
-                    android:background="#000000"
+                    android:background="@color/black"
                     android:layout_width="match_parent" />
 
                 <LinearLayout
@@ -71,64 +71,98 @@
                     android:layout_height="match_parent"
                     android:layout_weight="20"
                     android:orientation="horizontal"
-                    android:background="#E4E4E4">
+                    android:background="@color/translusentPrimary">
 
                     <TextView
                         android:id="@+id/textView9_reviewReport"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:text="Group No."
                         android:layout_weight="1"
-                        android:textSize="16dp"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
                         android:textColor="@color/black"
                         android:layout_gravity="center_vertical|left"
                         android:gravity="left|center_vertical"
                         android:padding="5dp" />
 
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/black"/>
 
                     <TextView
                         android:id="@+id/textView_studentID_reviewReport"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
                         android:clickable="false"
                         android:text="Student ID"
                         android:layout_weight="6"
-                        android:textSize="16dp"
-                        android:singleLine="true"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
                         android:textColor="@color/black"
                         android:layout_gravity="center_vertical|left"
                         android:gravity="left|center_vertical"
                         android:padding="5dp"/>
 
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/black"/>
 
                     <TextView
                         android:id="@+id/textView_fullname_reviewReport"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
                         android:clickable="false"
                         android:text="Student Name"
                         android:layout_weight="12"
-                        android:textSize="16dp"
-                        android:singleLine="true"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
                         android:textColor="@color/black"
                         android:layout_gravity="center_vertical|left"
                         android:gravity="left|center_vertical"
                         android:padding="5dp"/>
 
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/black"/>
 
                     <TextView
                         android:id="@+id/textView_email_reviewReport"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
                         android:clickable="false"
                         android:text="Email"
                         android:layout_weight="20"
-                        android:textSize="16dp"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
                         android:textColor="@color/black"
-                        android:singleLine="true"
                         android:layout_gravity="center_vertical|left"
                         android:gravity="left|center_vertical"
                         android:padding="5dp" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/black"/>
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="36dp"
+                        android:text="report"
+                        android:textStyle="bold"
+                        android:textSize="18sp"
+                        android:visibility="invisible"
+                        android:layout_marginRight="16dp"
+                        android:paddingRight="16dp"
+                        android:paddingLeft="16dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="@drawable/ic_start_button"/>
+
                 </LinearLayout>
 
                 <ListView
