--- a/app/src/main/res/layout/fragment_file_viewer.xml
+++ b/app/src/main/res/layout/fragment_file_viewer.xml
@@ -8,10 +8,11 @@
 
     <ImageButton
         android:id="@+id/file"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
-        android:background="@drawable/file" />
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/ic_audio" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,17 +20,23 @@
         android:layout_above="@+id/file"
         android:layout_centerHorizontal="true"
         android:text="Please tap the file to listen your record"
-        android:textColor="#000000"
-        android:textSize="20dp"
+        android:layout_marginBottom="50dp"
+        android:textColor="@color/black"
+        android:textSize="40sp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/submit"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/file"
         android:layout_centerHorizontal="true"
         android:text="submit"
-        android:textColor="#000000"/>
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
 
 </RelativeLayout>
