--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:fab_colorNormal="@color/primary"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="20dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/ic_mic_white_36dp" />
@@ -46,14 +46,19 @@
         android:id="@+id/btnPause"
         android:drawableLeft="@drawable/ic_media_pause"
         android:text="@string/pause_recording_button"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:textAllCaps="true"
+        android:paddingRight="10dp"
         android:fontFamily="sans-serif-condensed"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"/>
+        android:background="@color/colorPrimary"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,7 +67,7 @@
         android:text="@string/record_prompt"
         android:textStyle="bold"
         android:textSize="17sp"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:fontFamily="sans-serif-condensed"
         android:layout_above="@+id/btnRecord"
         android:layout_centerHorizontal="true"
