--- a/app/src/main/res/layout/grid_item_mark_markpage.xml
+++ b/app/src/main/res/layout/grid_item_mark_markpage.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textStyle="italic"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
