--- a/app/src/main/res/layout/list_comment_only.xml
+++ b/app/src/main/res/layout/list_comment_only.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="16dp"
         android:layout_marginTop="20dp"
         android:paddingLeft="20dp"
