--- a/app/src/main/res/layout/list_individual_assessment.xml
+++ b/app/src/main/res/layout/list_individual_assessment.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="20dp"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
