--- a/app/src/main/res/layout/list_student_withbutton.xml
+++ b/app/src/main/res/layout/list_student_withbutton.xml
@@ -14,84 +14,91 @@
             android:gravity="left"
             android:layout_weight="1"
             android:text="Group No."
-            android:textColor="#000000"
-            android:textSize="16dp"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             android:padding="5dp"
             android:layout_gravity="center_vertical" />
 
+        <View
+            android:id="@+id/divider22"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/black"/>
 
-    <View
-        android:id="@+id/divider22"
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="#d9000000"/>
+        <TextView
+            android:id="@+id/textView_studentID_studentsWithButton"
+            android:layout_width="100dp"
+            android:layout_height="35dp"
+            android:clickable="false"
+            android:gravity="left"
+            android:padding="5dp"
+            android:layout_weight="6"
+            android:singleLine="true"
+            android:text="Student ID"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_gravity="center_vertical"/>
 
-    <TextView
-        android:id="@+id/textView_studentID_studentsWithButton"
-        android:layout_width="100dp"
-        android:layout_height="35dp"
-        android:clickable="false"
-        android:gravity="left"
-        android:padding="5dp"
-        android:layout_weight="6"
-        android:singleLine="true"
-        android:text="Student ID"
-        android:textColor="#000000"
-        android:textSize="16dp"
-        android:layout_gravity="center_vertical"/>
+        <View
+            android:id="@+id/divider24"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/black"/>
 
-    <View
-        android:id="@+id/divider24"
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="#d9000000"/>
+        <TextView
+                android:id="@+id/textView_fullname_studentsWithButton"
+                android:layout_width="200dp"
+                android:layout_height="35dp"
+                android:clickable="false"
+                android:layout_weight="12"
+                android:text="Student Name"
+                android:textSize="18sp"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:gravity="left"
+                android:padding="5dp"
+            android:layout_gravity="center_vertical"/>
 
-    <TextView
-            android:id="@+id/textView_fullname_studentsWithButton"
+        <View
+            android:id="@+id/divider25"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/black"/>
+
+        <TextView
+            android:id="@+id/textView_email_studentsWithButton"
             android:layout_width="200dp"
             android:layout_height="35dp"
             android:clickable="false"
-        android:layout_weight="12"
-            android:text="Student Name"
-            android:textSize="16dp"
-            android:singleLine="true"
-            android:textColor="#000000"
             android:gravity="left"
+            android:layout_weight="20"
             android:padding="5dp"
-        android:layout_gravity="center_vertical"/>
+            android:singleLine="true"
+            android:text="Email"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:layout_gravity="center_vertical"/>
 
-    <View
-        android:id="@+id/divider25"
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="#d9000000"/>
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/black"/>
 
-    <TextView
-        android:id="@+id/textView_email_studentsWithButton"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
-        android:clickable="false"
-        android:gravity="left"
-        android:layout_weight="20"
-        android:padding="5dp"
-        android:singleLine="true"
-        android:text="Email"
-        android:textColor="#000000"
-        android:textSize="16dp"
-        android:layout_gravity="center_vertical"/>
-
-    <Button
-        android:id="@+id/button_start_studentsWithButton"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
-        android:text="start"
-        android:layout_marginRight="16dp"
-        android:paddingRight="16dp"
-        android:paddingLeft="16dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/ic_start_button"/>
+        <Button
+            android:id="@+id/button_start_studentsWithButton"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:text="start"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_marginRight="16dp"
+            android:paddingRight="16dp"
+            android:paddingLeft="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/ic_start_button"/>
 
 
 </LinearLayout>
