--- a/app/src/main/res/layout/activity_editable_group_report.xml
+++ b/app/src/main/res/layout/activity_editable_group_report.xml
@@ -60,7 +60,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Assessor: Xxxxxxx Xxxxxx"
+                    android:text="Marker: Xxxxxxx Xxxxxx"
                     android:gravity="left|center_vertical"
                     android:textColor="@color/black"
                     android:layout_marginRight="40dp"
@@ -82,7 +82,7 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
 
                 <Button
                     android:id="@+id/button_finalReport_groupReport"
@@ -97,7 +97,7 @@
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
             </LinearLayout>
 
             <RelativeLayout
@@ -108,7 +108,7 @@
                 <ScrollView
                     android:layout_width="1024dp"
                     android:layout_height="match_parent"
-                    android:background="#ffffff"
+                    android:background="@color/white"
                     android:layout_centerHorizontal="true">
 
                     <TextView
