--- a/app/src/main/res/layout/activity_send_report_individual.xml
+++ b/app/src/main/res/layout/activity_send_report_individual.xml
@@ -66,7 +66,7 @@
                     android:paddingLeft="16dp"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
 
                 <Button
                     android:id="@+id/button_sendStudent_sendReportIndividual"
@@ -80,7 +80,7 @@
                     android:paddingLeft="16dp"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
 
                 <Button
                     android:id="@+id/button_sendBoth_sendReportIndividual"
@@ -95,7 +95,7 @@
                     android:textSize="20sp"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
 
                 <Button
                     android:id="@+id/btn_finish_sendReportIndividual"
@@ -109,7 +109,7 @@
                     android:paddingLeft="16dp"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:background="@color/colorPrimary"/>
+                    android:background="@drawable/ripple_round_button"/>
             </LinearLayout>
 
             <RelativeLayout
@@ -120,7 +120,7 @@
                 <ScrollView
                     android:layout_width="1024dp"
                     android:layout_height="match_parent"
-                    android:background="#ffffff"
+                    android:background="@color/white"
                     android:layout_centerHorizontal="true">
 
                     <TextView
