--- a/app/src/main/res/drawable/ic_textbox.xml
+++ b/app/src/main/res/drawable/ic_textbox.xml
@@ -8,9 +8,9 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/ivory" />
     <stroke
-        android:width="1dip"
-        android:color="#ffffff" />
+        android:width="3dp"
+        android:color="@color/black" />
 
 </shape>
