--- a/app/src/main/res/drawable/ic_textbox_focused.xml
+++ b/app/src/main/res/drawable/ic_textbox_focused.xml
@@ -7,9 +7,9 @@
         android:left="10dp"
         android:right="10dp"
         android:top="10dp" />
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/ivory" />
     <stroke
-        android:width="3dip"
+        android:width="3dp"
         android:color="@color/colorAccent" />
 
 </shape>
