--- a/app/src/main/res/drawable/rounded_box.xml
+++ b/app/src/main/res/drawable/rounded_box.xml
@@ -3,16 +3,16 @@
     android:shape="rectangle" >
 
     <solid
-        android:color="@color/white" >
+        android:color="@color/ivory" >
     </solid>
+
     <stroke
-        android:color="@color/black"
-        android:width="1dp">
+        android:color="@color/colorAccent"
+        android:width="3dp">
 
     </stroke>
 
     <corners
-        android:radius="8dp"
-        />
+        android:radius="8dp"/>
 
 </shape>
