--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -40,7 +40,7 @@
                 android:layout_marginEnd="0dp"
                 android:layout_marginBottom="0dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/back" />
+                android:src="@color/white" />
 
             <RelativeLayout
                 android:layout_below="@id/toolbar_project_about"
@@ -403,39 +403,23 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/relativelayout_top_about"
-                    android:layout_alignParentBottom="true" >
+                    android:layout_marginBottom="50dp"
+                    android:layout_below="@id/relativelayout_top_about" >
 
                     <Button
-                        android:id="@+id/button_next_inabout"
+                        android:id="@+id/button_next_about"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentBottom="true"
                         android:layout_marginEnd="50dp"
                         android:layout_marginBottom="50dp"
-                        android:onClick="next_About"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:onClick="nextAbout"
                         android:text="Next"
                         android:textSize="20sp"
                         android:paddingLeft="16dp"
                         android:paddingRight="16dp"
-                        android:background="@drawable/ic_button_background"
-                        android:textColor="@color/white" />
-
-                    <Button
-                        android:id="@+id/button_save_inabout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:layout_marginEnd="40dp"
-                        android:layout_marginBottom="50dp"
-                        android:layout_alignParentBottom="true"
-                        android:layout_toStartOf="@id/button_next_inabout"
-                        android:onClick="save_About"
-                        android:text="Save"
-                        android:textSize="20sp"
-                        android:paddingLeft="16dp"
-                        android:paddingRight="16dp"
-                        android:background="@drawable/ic_button_background"
+                        android:background="@drawable/ripple_round_button"
                         android:textColor="@color/white" />
                 </RelativeLayout>
             </RelativeLayout>
