--- a/app/src/main/res/layout/activity_criteria.xml
+++ b/app/src/main/res/layout/activity_criteria.xml
@@ -5,7 +5,7 @@
     xmlns:toolbar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity_CriteriaList">
+    tools:context=".Activity_Criteria">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -211,8 +211,8 @@
                             android:paddingLeft="16dp"
                             android:paddingRight="16dp"
                             android:layout_marginTop="10dp"
-                            android:onClick="next_inCriteriaList"
-                            android:background="@drawable/ic_button_background"
+                            android:onClick="nextCriteria"
+                            android:background="@drawable/ripple_round_button"
                             android:textColor="@color/white" />
 
                     </RelativeLayout>
