--- a/app/src/main/res/layout/activity_mark_allocation.xml
+++ b/app/src/main/res/layout/activity_mark_allocation.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/back" />
+                android:src="@color/white" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -84,22 +84,6 @@
                     android:layout_weight="5">
 
                     <Button
-                        android:id="@+id/button_save_markAllocation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:textSize="20sp"
-                        android:paddingLeft="16dp"
-                        android:paddingRight="16dp"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginEnd="40dp"
-                        android:layout_marginBottom="50dp"
-                        android:layout_toStartOf="@+id/button_next_markAllocation"
-                        android:onClick="save_markAllocation"
-                        android:text="Save"
-                        android:textColor="@color/white"
-                        android:background="@drawable/ic_button_background"/>
-
-                    <Button
                         android:id="@+id/button_next_markAllocation"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
@@ -110,10 +94,10 @@
                         android:layout_alignParentBottom="true"
                         android:layout_marginEnd="50dp"
                         android:layout_marginBottom="50dp"
-                        android:background="@drawable/ic_button_background"
-                        android:onClick="next_markAllocation"
+                        android:background="@drawable/ripple_round_button"
+                        android:onClick="nextMarkAllocation"
                         android:text="Next"
-                        android:textColor="#ffffff" />
+                        android:textColor="@color/white" />
                 </RelativeLayout>
             </LinearLayout>
         </RelativeLayout>
