--- a/app/src/main/res/layout/activity_marker_management.xml
+++ b/app/src/main/res/layout/activity_marker_management.xml
@@ -34,9 +34,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/back" />
+                android:src="@color/white" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -45,7 +45,8 @@
                 <RelativeLayout
                     android:id="@+id/relativelayout_top_marker_management"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_alignParentTop="true" >
 
                     <TextView
@@ -98,9 +99,10 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/relativeLayout_bottom_studentManagement"
+                    android:id="@+id/relativeLayout_bottom_marker_management"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
                     android:layout_alignParentBottom="true"
                     android:layout_below="@id/relativelayout_top_marker_management">
 
@@ -115,13 +117,13 @@
                         android:layout_alignParentBottom="true"
                         android:layout_marginEnd="50dp"
                         android:layout_marginBottom="50dp"
-                        android:background="@drawable/ic_button_background"
+                        android:background="@drawable/ripple_round_button"
                         android:onClick="nextMarkerManagement"
                         android:text="next"
                         android:textColor="@color/white"/>
 
                 </RelativeLayout>
-            </RelativeLayout>
+            </LinearLayout>
         </RelativeLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
