--- a/app/src/main/res/layout/activity_reaper_mark.xml
+++ b/app/src/main/res/layout/activity_reaper_mark.xml
@@ -39,7 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/back" />
+                    android:background="@color/white" />
 
                 <Button
                     android:id="@+id/button_fresh_markPage"
@@ -48,8 +48,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginTop="15dp"
                     android:layout_marginRight="16dp"
-                    android:background="@color/colorPrimary"
-                    android:onClick="refresh_MarkPage"
+                    android:background="@drawable/ripple_round_button"
+                    android:onClick="refreshMarkPage"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:text="Refresh"
@@ -66,7 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/back" />
+                    android:src="@color/white" />
 
                 <GridView
                     android:id="@+id/listView_markItem_markPage"
