--- a/app/src/main/res/layout/activity_send_report_group.xml
+++ b/app/src/main/res/layout/activity_send_report_group.xml
@@ -120,7 +120,7 @@
                 <ScrollView
                     android:layout_width="1024dp"
                     android:layout_height="match_parent"
-                    android:background="#ffffff"
+                    android:background="@color/white"
                     android:layout_centerHorizontal="true">
 
                     <TextView
