--- a/app/src/main/res/layout/activity_student_management.xml
+++ b/app/src/main/res/layout/activity_student_management.xml
@@ -34,9 +34,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/back" />
+                android:src="@color/white" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -45,7 +45,8 @@
                 <RelativeLayout
                     android:id="@+id/relativelayout_top_student_management"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_alignParentTop="true" >
 
                     <TextView
@@ -119,7 +120,33 @@
                         android:scrollbars="vertical"
                         android:padding="10dp" />
                 </RelativeLayout>
-            </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/relativeLayout_bottom_student_management"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:layout_alignParentBottom="true"
+                    android:layout_below="@id/relativelayout_top_student_management">
+
+                    <Button
+                        android:id="@+id/button_save_student_management"
+                        android:layout_width="wrap_content"
+                        android:layout_height="36dp"
+                        android:textSize="20sp"
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="50dp"
+                        android:layout_marginBottom="50dp"
+                        android:background="@drawable/ripple_round_button"
+                        android:onClick="saveStudentManagement"
+                        android:text="@string/save_button"
+                        android:textColor="@color/white"/>
+
+                </RelativeLayout>
+            </LinearLayout>
         </RelativeLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
