--- a/app/src/main/res/layout/dialog_record_mark.xml
+++ b/app/src/main/res/layout/dialog_record_mark.xml
@@ -17,38 +17,48 @@
             android:layout_height="match_parent">
 
             <RelativeLayout
-                android:id="@+id/linearlayout_dialog_warning_editing"
+                android:id="@+id/linearlayout_dialog_record_mark"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textView_tile_dialog_warning_editing"
+                    android:id="@+id/textView_tile_dialog_record_mark"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:text="Warning"
+                    android:text="Mark Recording"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:paddingTop="10dp"
                     android:paddingStart="16dp"
                     android:textColor="@color/black"/>
 
+                <ProgressBar
+                    android:id="@+id/progressbar_marker_invitation"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:paddingTop="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_toEndOf="@id/textView_tile_dialog_record_mark"
+                    android:layout_centerVertical="true"
+                    android:visibility="visible"/>
+
             </RelativeLayout>
 
             <View
                 android:id="@+id/divider_dialog_warning_editing"
                 android:layout_width="match_parent"
-                android:layout_below="@id/linearlayout_dialog_warning_editing"
+                android:layout_below="@id/linearlayout_dialog_record_mark"
                 android:layout_height="2dp"
                 android:background="@color/colorPrimary" />
 
             <TextView
-                android:id="@+id/textView_dialog_query_waring_editing"
+                android:id="@+id/textView_dialog_query_record_mark"
                 android:layout_below="@id/divider_dialog_warning_editing"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:text="Are you sure to discard all changes?"
+                android:text="Please wait for a moment."
                 android:maxLines="3"
                 android:textSize="25sp"
                 android:paddingTop="10dp"
