--- a/app/src/main/res/layout/list_other_comment.xml
+++ b/app/src/main/res/layout/list_other_comment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="20dp"
@@ -23,7 +23,6 @@
         android:id="@+id/et_other_comment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_below="@+id/tv_other_comment"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="16dp"
@@ -31,11 +30,11 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_box"
         android:gravity="top|left"
-        android:hint="Please enter other comment."
+        android:hint="Please enter other comments."
         android:minHeight="100dp"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
-        android:textSize="16sp" />
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btn_assessment_save"
@@ -49,7 +48,7 @@
         android:textSize="20sp"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/ripple_round_button"
         android:text="Save"
         android:textColor="@color/white"/>
 </RelativeLayout>
