--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -62,9 +62,9 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
             android:layout_weight="0"
-            android:background="@drawable/ic_button_background"
+            android:background="@drawable/ripple_round_button"
             android:text="View Report"
-            android:textColor="#ffffff" />
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
