--- a/app/src/main/res/layout/activity_criteria.xml
+++ b/app/src/main/res/layout/activity_criteria.xml
@@ -40,6 +40,7 @@
                     android:id="@+id/textView_criterialist"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
                     android:text="Criteria"
                     style="@style/NewProjectElementTitle" />
 
@@ -86,7 +87,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="sans-serif-medium"
-                                    android:layout_toStartOf="@id/button_uploadMarkedCriteria_criteriaList"
+                                    android:layout_toStartOf="@id/button_help_criteria"
                                     android:gravity="left"
                                     android:paddingLeft="20dp"
                                     android:paddingRight="10dp"
@@ -96,6 +97,17 @@
                                     android:textStyle="bold"
                                     android:textColor="@color/black"
                                     android:textSize="25sp" />
+
+                                <Button
+                                    android:id="@+id/button_help_criteria"
+                                    android:layout_toStartOf="@id/button_uploadMarkedCriteria_criteriaList"
+                                    android:layout_width="30dp"
+                                    android:layout_height="30dp"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginEnd="10dp"
+                                    android:background="@drawable/ic_help"
+                                    android:onClick="helpCriteriaUpload"
+                                    android:gravity="right" />
 
                                 <Button
                                     android:id="@+id/button_uploadMarkedCriteria_criteriaList"
