--- a/app/src/main/res/layout/activity_show_comment_markallocation.xml
+++ b/app/src/main/res/layout/activity_show_comment_markallocation.xml
@@ -24,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar_show_comment_markallocation"
-        android:fillViewport="true" >
+        android:fillViewport="true"
+        android:background="@color/white">
 
         <RelativeLayout
             android:layout_width="match_parent"
