--- a/app/src/main/res/layout/item_list_three_title.xml
+++ b/app/src/main/res/layout/item_list_three_title.xml
@@ -8,11 +8,12 @@
     <TextView
         android:id="@+id/tv_title_three"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="@drawable/selector_tv_three_bg"
         android:gravity="center_vertical"
         android:paddingEnd="@dimen/tv_left_20"
         android:paddingStart="@dimen/tv_left_40"
+        android:textSize="20sp"
         android:textColor="@color/selector_tv_color" />
 
 </LinearLayout>
