--- a/app/src/main/res/layout/item_list_two_title.xml
+++ b/app/src/main/res/layout/item_list_two_title.xml
@@ -7,11 +7,12 @@
     <TextView
         android:id="@+id/tv_title_two"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="@drawable/selector_tv_two_bg"
         android:gravity="center_vertical"
         android:paddingEnd="@dimen/tv_left_80"
         android:paddingStart="@dimen/tv_left_80"
+        android:textSize="20sp"
         android:textColor="@color/selector_tv_color" />
 
 </LinearLayout>
